--- a/index.html
+++ b/index.html
@@ -5,12 +5,11 @@
   <title>VM SecOps – Vasu Melipaka | Security Analyst & Pentester</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <!-- Font -->
+  <!-- Fonts and Tailwind CSS -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
-  <!-- Tailwind CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
     tailwind.config = {
@@ -27,23 +26,18 @@
       }
     }
   </script>
-
   <style>
     html { scroll-behavior: smooth; }
     body { font-family: "Poppins", sans-serif; }
-
     .glass {
       background: rgba(15, 23, 42, 0.9);
       backdrop-filter: blur(18px);
       border: 1px solid rgba(148, 163, 184, 0.25);
     }
-
     .grid-bg {
       background-image: radial-gradient(circle at 1px 1px, rgba(148,163,184,0.12) 1px, transparent 0);
       background-size: 32px 32px;
     }
-
-    /* Ticker */
     @keyframes marquee {
       0% { transform: translateX(100%); }
       100% { transform: translateX(-100%); }
@@ -59,326 +53,71 @@
 
   <!-- NAVBAR -->
   <header class="sticky top-0 z-30 bg-slate-950/80 backdrop-blur border-b border-slate-800">
-    <div class="max-w-6xl mx-auto flex items-center justify-between px-4 py-3">
-      <div class="flex items-center gap-2">
-        <div class="h-8 w-8 rounded-xl bg-primary/20 border border-primary/60 flex items-center justify-center text-primary text-xs font-semibold">
-          VM
-        </div>
-        <div>
-          <p class="text-xs tracking-[0.25em] text-slate-400 uppercase">VM SecOps</p>
-          <p class="text-xs text-slate-500">Security | Pentesting | DevSecOps</p>
-        </div>
-      </div>
-
-      <nav class="hidden md:flex items-center gap-6 text-sm">
-        <a href="#top" class="hover:text-primary">Home</a>
-        <a href="#profile" class="hover:text-primary">Profile</a>
-        <a href="#services" class="hover:text-primary">Services</a>
-        <a href="#skills" class="hover:text-primary">Skills</a>
-        <a href="#contact" class="hover:text-primary">Contact</a>
-      </nav>
-    </div>
+    <!-- ... navbar code ... -->
   </header>
 
-  <!-- HERO -->
-  <section id="top" class="max-w-6xl mx-auto px-4 pt-10 pb-24 md:pt-16">
-    <div class="flex flex-col md:flex-row items-center gap-10 md:gap-14">
-
-      <!-- TEXT SIDE -->
-      <div class="flex-1">
-        <p class="text-xs tracking-[0.3em] text-primarySoft uppercase mb-3">
-          Senior Security Analyst · Offensive Security
-        </p>
-        <h1 class="text-4xl md:text-5xl font-semibold text-primary drop-shadow-md">
-          Vasu Melipaka
-        </h1>
-
-        <p class="mt-3 text-sm md:text-base text-slate-300 leading-relaxed max-w-xl">
-          I help organizations strengthen their Web, Mobile (Android/iOS), and API security by performing 
-          deep manual penetration testing aligned with OWASP, MASVS, and PCI DSS 4.0. My assessments uncover 
-          real-world attack paths that automated scanners miss — enabling leadership to make confident, 
-          risk-based security decisions.
-        </p>
-
-        <!-- BUTTONS -->
-        <div class="mt-7 flex flex-wrap gap-4">
-          <a href="#profile"
-             class="px-5 py-3 rounded-xl bg-primary text-slate-950 font-semibold text-sm shadow-lg shadow-cyan-500/30">
-            About Vasu
-          </a>
-          <a href="#services"
-             class="px-5 py-3 rounded-xl border border-primary/70 text-primary font-semibold text-sm hover:bg-primary/10">
-            Security Services for Your Business
-          </a>
-        </div>
-
-        <!-- BADGES -->
-        <div class="mt-5 flex flex-wrap gap-2 text-[11px] text-slate-400">
-          <span class="px-3 py-1 rounded-full bg-slate-900/70 border border-slate-700">Web & API Pentesting</span>
-          <span class="px-3 py-1 rounded-full bg-slate-900/70 border border-slate-700">Mobile Security (MASVS)</span>
-          <span class="px-3 py-1 rounded-full bg-slate-900/70 border border-slate-700">PCI DSS 4.0 Aligned</span>
-        </div>
-
-        <!-- LINKEDIN -->
-        <a href="https://www.linkedin.com/in/vaasumelipaka"
-           class="inline-block mt-5 px-5 py-2 rounded-xl bg-slate-900 border border-slate-700 text-slate-200 text-sm">
-          View LinkedIn Profile →
-        </a>
+  <main class="max-w-6xl mx-auto px-4 pt-10 pb-24 md:pt-16 flex flex-col md:flex-row gap-12">
+    
+    <!-- LEFT SIDEBAR / RED BOX - LIVE CYBERSECURITY NEWS -->
+    <aside class="md:w-1/3 w-full">
+      <div id="vm-daily-news"
+           class="glass rounded-2xl p-6 border-2 border-red-500 bg-slate-900/90 text-slate-100 mb-6"
+           style="min-height:420px;">
+        <h2 class="text-lg font-semibold text-primary mb-4">
+          🔔 Daily Cybersecurity News
+        </h2>
+        <div id="vm-daily-news-content" class="space-y-2 text-sm text-slate-200">Loading news...</div>
       </div>
+      <!-- You can add more content/modules here in the sidebar if needed -->
+    </aside>
 
-      <!-- PHOTO -->
-      <div class="flex-1 flex justify-center md:justify-end">
-        <div class="relative w-64 h-64 md:w-72 md:h-72 rounded-3xl glass shadow-[0_0_80px_rgba(34,211,238,0.25)] flex items-center justify-center">
-          <img
-            src="https://media.licdn.com/dms/image/v2/D5603AQGsPi39qzGTuw/profile-displayphoto-shrink_400_400/profile-displayphoto-shrink_400_400/0/1724678006163?e=1765411200&v=beta&t=GUMLXMFnAeRJz82qGWuObJr6Xoz-gJhaXrykxPJcn0A"
-            alt="Vasu Melipaka"
-            class="w-[92%] h-[92%] object-cover rounded-2xl border border-slate-700/80" />
+    <!-- MAIN CONTENT AREA (REST OF PAGE) -->
+    <section class="flex-1">
+      <!-- Your profile, hero, services, etc. -->
+      <!-- ...existing code from your sections... -->
+    </section>
+  </main>
 
-          <div class="absolute -top-3 -left-3 px-3 py-1 rounded-full bg-emerald-500 text-xs text-slate-950 font-semibold shadow-lg">
-            Available for consulting
-          </div>
+  <!-- POPUP WIDGET, TICKER, ETC. Keep your previous code as needed -->
 
-          <div class="absolute -bottom-3 -right-3 px-3 py-1 rounded-full bg-slate-900/90 text-[11px] border border-slate-600">
-            6+ yrs Cybersecurity · 11+ yrs IT
-          </div>
-        </div>
-      </div>
-
-    </div>
-  </section>
-
-  <!-- PROFILE SUMMARY -->
-  <section id="profile" class="max-w-6xl mx-auto px-4 pb-20">
-    <div class="flex flex-col md:flex-row md:items-center justify-between gap-4 mb-8">
-      <h2 class="text-2xl md:text-3xl font-semibold text-primary">
-        Profile Summary
-      </h2>
-      <p class="text-xs md:text-sm text-slate-400">
-        Focused on high-impact, manual security assessments – Web, Mobile & APIs.
-      </p>
-    </div>
-
-    <div class="grid md:grid-cols-2 gap-6">
-      <div class="glass rounded-2xl p-6">
-        <h3 class="text-lg font-semibold text-slate-100 mb-2">Who I Am</h3>
-        <p class="text-sm text-slate-300 leading-relaxed">
-          I am a Senior Security Analyst specialized in penetration testing for Web, Mobile and API platforms.
-        </p>
-      </div>
-
-      <div class="glass rounded-2xl p-6">
-        <h3 class="text-lg font-semibold text-slate-100 mb-2">What I Deliver</h3>
-        <ul class="text-sm text-slate-300 space-y-2 leading-relaxed">
-          <li>• Evidence-backed findings with clear PoCs.</li>
-          <li>• OWASP / MASVS / PCI controls mapping.</li>
-          <li>• CVSS-based risk ratings.</li>
-          <li>• Developer-ready remediation guidance.</li>
-          <li>• Retesting to validate fixes.</li>
-        </ul>
-      </div>
-    </div>
-  </section>
-
-  <!-- SERVICES -->
-  <section id="services" class="max-w-6xl mx-auto px-4 pb-20">
-    <div class="flex flex-col md:flex-row md:items-center justify-between gap-4 mb-8">
-      <h2 class="text-2xl md:text-3xl font-semibold text-primary">
-        Security Services
-      </h2>
-    </div>
-
-    <div class="grid md:grid-cols-3 gap-6 text-sm">
-      <div class="glass rounded-2xl p-5 border border-primary/30">
-        <h3 class="font-semibold text-slate-100 mb-2">Web Application Pentesting</h3>
-        <p class="text-slate-300">Deep testing for auth flaws, IDOR, BAC, session issues, validation & logic flaws.</p>
-      </div>
-
-      <div class="glass rounded-2xl p-5">
-        <h3 class="font-semibold text-slate-100 mb-2">Mobile App Security</h3>
-        <p class="text-slate-300">MASVS testing including storage, API calls, RE, runtime protections & SSL pinning.</p>
-      </div>
-
-      <div class="glass rounded-2xl p-5">
-        <h3 class="font-semibold text-slate-100 mb-2">API Security</h3>
-        <p class="text-slate-300">Testing BOLA/BFLA, JWT issues, rate limiting, replay & abuse scenarios.</p>
-      </div>
-
-      <div class="glass rounded-2xl p-5">
-        <h3 class="font-semibold text-slate-100 mb-2">DevSecOps</h3>
-        <p class="text-slate-300">SAST, SCA, CI/CD hardening & secrets scanning.</p>
-      </div>
-
-      <div class="glass rounded-2xl p-5">
-        <h3 class="font-semibold text-slate-100 mb-2">Cloud Security</h3>
-        <p class="text-slate-300">AWS & Azure IAM / Network / Storage misconfiguration review.</p>
-      </div>
-
-      <div class="glass rounded-2xl p-5">
-        <h3 class="font-semibold text-slate-100 mb-2">Retesting & Advisory</h3>
-        <p class="text-slate-300">Validation of fixes & continuous advisory support.</p>
-      </div>
-    </div>
-  </section>
-
-  <!-- CONTACT -->
-  <section id="contact" class="max-w-6xl mx-auto px-4 pb-16">
-    <div class="glass rounded-2xl p-6 md:p-8 flex flex-col md:flex-row items-start md:items-center justify-between gap-6">
-      <div>
-        <h2 class="text-2xl font-semibold text-primary mb-2">Let’s Talk Security</h2>
-        <p class="text-sm text-slate-300 max-w-xl">
-          Need a pentest, API review, mobile testing or PCI DSS help? Reach out anytime.
-        </p>
-      </div>
-
-      <div class="flex flex-col gap-3 text-sm">
-        <a href="mailto:contact@vmsecops.com"
-           class="px-5 py-2 rounded-xl bg-primary text-slate-950 font-semibold text-center">
-          Email: contact@vmsecops.com
-        </a>
-
-        <a href="https://wa.me/917386666420"
-           class="px-5 py-2 rounded-xl bg-emerald-500/90 text-slate-950 font-semibold text-center">
-          WhatsApp: +91 7386666420
-        </a>
-
-        <a href="https://www.linkedin.com/in/vaasumelipaka"
-           class="px-5 py-2 rounded-xl bg-slate-900 border border-slate-600 text-slate-100 text-center">
-          View LinkedIn Profile
-        </a>
-      </div>
-    </div>
-
-    <p class="mt-6 text-[11px] text-slate-500 text-center">
-      © 2025 VM SecOps – Portfolio & Security Services by Vasu Melipaka.
-    </p>
-  </section>
-
-
-<!-- ========================================================= -->
-<!-- 🔥 CYBER THREAT WIDGET + LIVE CVE + LIVE NEWS + TICKER -->
-<!-- ========================================================= -->
-
-<!-- POPUP WIDGET -->
-<div id="vm-cyber-widget"
-     class="fixed bottom-20 right-6 w-96 bg-slate-900/95 border border-slate-700 shadow-xl rounded-2xl p-4 text-slate-200 z-50 backdrop-blur-xl hidden">
-
-  <div class="flex justify-between items-center mb-2">
-    <h3 class="text-sm font-semibold text-primary">🔐 Live Cyber Threat Updates</h3>
-    <button onclick="document.getElementById('vm-cyber-widget').style.display='none'"
-      class="text-slate-400 hover:text-primary text-lg font-bold">×</button>
-  </div>
-
-  <div class="text-[11px] text-slate-400 mb-2">Latest Cybersecurity News</div>
-
-  <div id="vm-news-list" class="text-xs text-slate-300 space-y-3 h-40 overflow-y-auto pr-2">
-    <p>Loading news...</p>
-  </div>
-
-  <hr class="border-slate-700 my-3">
-
-  <div class="text-[11px] text-slate-400 mb-2">Latest Critical CVEs (High & Critical)</div>
-
-  <div id="vm-cve-list" class="text-xs text-slate-300 space-y-2 h-36 overflow-y-auto pr-2">
-    <p>Loading CVEs...</p>
-  </div>
-
-  <button class="mt-3 w-full py-2 bg-primary text-slate-950 text-xs font-semibold rounded-lg"
-          onclick="document.getElementById('vm-cyber-widget').style.display='none'">
-    Close
-  </button>
-</div>
-
-<!-- SCROLLING TICKER -->
-<div class="fixed bottom-0 left-0 w-full bg-slate-950/90 border-t border-slate-700 py-2 overflow-hidden z-40 backdrop-blur">
-  <div id="vm-ticker" class="whitespace-nowrap text-primary text-xs font-semibold animate-marquee">
-    Fetching real-time cybersecurity updates…
-  </div>
-</div>
-
-<!-- LIVE NEWS + CVE FETCH SCRIPT -->
-<script>
-// Fetch Cybersecurity News
-async function loadCyberNews() {
-  const container = document.getElementById("vm-news-list");
-  container.innerHTML = "Loading news…";
-
-  try {
-    const res = await fetch("https://hn.algolia.com/api/v1/search?query=cyber%20security&tags=story");
-    const data = await res.json();
-
-    container.innerHTML = "";
-    data.hits.slice(0, 8).forEach(n => {
-      container.innerHTML += `
-        <div>
-          <a href="${n.url}" target="_blank" class="text-primary font-medium hover:underline">
-            ${n.title}
-          </a>
-          <p class="text-slate-500 text-[10px]">${new Date(n.created_at).toLocaleDateString()}</p>
-        </div>
-      `;
-    });
-
-    return data.hits.slice(0, 5).map(n => n.title);
-  } catch {
-    container.innerHTML = "<p class='text-red-400'>News fetch failed.</p>";
-    return [];
-  }
-}
-
-// Fetch Latest CVEs
-async function loadCVEs() {
-  const container = document.getElementById("vm-cve-list");
-  container.innerHTML = "Loading CVEs…";
-
-  try {
-    const res = await fetch("https://services.nvd.nist.gov/rest/json/cves/2.0?cvssV3Severity=HIGH,Critical");
-    const data = await res.json();
-
-    container.innerHTML = "";
-
-    data.vulnerabilities.slice(0, 8).forEach(v => {
-      const cve = v.cve.id;
-      const score = v.cve.metrics.cvssMetricV31?.[0]?.cvssData?.baseScore || "N/A";
-      const desc = v.cve.descriptions[0].value;
-
-      container.innerHTML += `
-        <div>
-          <span class="text-red-400 font-bold">${cve}</span>
-          <span class="text-slate-400 text-[10px]">Score: ${score}</span>
-          <p class="text-slate-500 text-[10px]">${desc.substring(0, 80)}...</p>
-        </div>
-      `;
-    });
-
-    return data.vulnerabilities.slice(0, 5).map(v => v.cve.id + " (High)");
-  } catch {
-    container.innerHTML = "<p class='text-red-400'>CVE fetch failed.</p>";
-    return [];
-  }
-}
-
-// Build Ticker
-async function updateTicker() {
-  const ticker = document.getElementById("vm-ticker");
-
-  const news = await loadCyberNews();
-  const cves = await loadCVEs();
-
-  const combined = [
-    ...news.map(n => `📰 ${n}`),
-    ...cves.map(c => `⚠️ ${c}`)
-  ];
-
-  ticker.innerText = combined.join("  •  ");
-}
-
-// Show popup after 3 sec
-setTimeout(() => {
-  document.getElementById("vm-cyber-widget").style.display = "block";
-  updateTicker();
-}, 3000);
-
-</script>
-
+  <script>
+    // List of top cybersecurity RSS feeds
+    const cyberFeeds = [
+      { name: "The Hacker News", url: "https://feeds.feedburner.com/TheHackersNews" },
+      { name: "Dark Reading", url: "https://www.darkreading.com/rss.xml" },
+      { name: "BleepingComputer", url: "https://www.bleepingcomputer.com/feed/" },
+      { name: "SecurityWeek", url: "https://feeds.feedburner.com/Securityweek" }
+    ];
+    async function fetchFeed(feedUrl) {
+      const api = `https://api.rss2json.com/v1/api.json?rss_url=${encodeURIComponent(feedUrl)}`;
+      try {
+        const res = await fetch(api);
+        const data = await res.json();
+        return data.items ? data.items.slice(0, 4) : [];
+      } catch (err) {
+        return [];
+      }
+    }
+    async function renderCyberNews() {
+      let output = "";
+      for (const feed of cyberFeeds) {
+        const items = await fetchFeed(feed.url);
+        output += `<h3 class="text-accent mt-4 mb-1 text-base font-semibold">${feed.name}</h3><ul class="mb-3 space-y-2">`;
+        if (items.length === 0) {
+          output += `<li class="text-red-400">No news found.</li>`;
+        } else {
+          for (const n of items) {
+            output += `<li>
+              <a href="${n.link}" target="_blank" class="text-primary hover:underline font-medium">${n.title}</a>
+              <span class="text-xs text-accent ml-2">${new Date(n.pubDate).toLocaleDateString()}</span>
+            </li>`;
+          }
+        }
+        output += '</ul>';
+      }
+      document.getElementById('vm-daily-news-content').innerHTML = output;
+    }
+    document.addEventListener("DOMContentLoaded", renderCyberNews);
+  </script>
 </body>
 </html>
