Refactor HTML structure and update scripts
Refactor navbar and hero section, update CVE and news fetching scripts.

--- a/index.html
+++ b/index.html
@@ -57,202 +57,91 @@
 
 <body class="bg-gradient-to-br from-slate-950 via-slate-900 to-black text-slate-100 grid-bg">
 
-  <!-- NAVBAR -->
-  <header class="sticky top-0 z-30 bg-slate-950/80 backdrop-blur border-b border-slate-800">
-    <div class="max-w-6xl mx-auto flex items-center justify-between px-4 py-3">
-      <div class="flex items-center gap-2">
-        <div class="h-8 w-8 rounded-xl bg-primary/20 border border-primary/60 flex items-center justify-center text-primary text-xs font-semibold">
-          VM
-        </div>
-        <div>
-          <p class="text-xs tracking-[0.25em] text-slate-400 uppercase">VM SecOps</p>
-          <p class="text-xs text-slate-500">Security | Pentesting | DevSecOps</p>
-        </div>
+<!-- NAVBAR -->
+<header class="sticky top-0 z-30 bg-slate-950/80 backdrop-blur border-b border-slate-800">
+  <div class="max-w-6xl mx-auto flex items-center justify-between px-4 py-3">
+    <div class="flex items-center gap-2">
+      <div class="h-8 w-8 rounded-xl bg-primary/20 border border-primary/60 flex items-center justify-center text-primary text-xs font-semibold">
+        VM
       </div>
-
-      <nav class="hidden md:flex items-center gap-6 text-sm">
-        <a href="#top" class="hover:text-primary">Home</a>
-        <a href="#profile" class="hover:text-primary">Profile</a>
-        <a href="#services" class="hover:text-primary">Services</a>
-        <a href="#skills" class="hover:text-primary">Skills</a>
-        <a href="#contact" class="hover:text-primary">Contact</a>
-      </nav>
-    </div>
-  </header>
-
-  <!-- HERO -->
-  <section id="top" class="max-w-6xl mx-auto px-4 pt-10 pb-24 md:pt-16">
-    <div class="flex flex-col md:flex-row items-center gap-10 md:gap-14">
-
-      <!-- TEXT SIDE -->
-      <div class="flex-1">
-        <p class="text-xs tracking-[0.3em] text-primarySoft uppercase mb-3">
-          Senior Security Analyst · Offensive Security
-        </p>
-        <h1 class="text-4xl md:text-5xl font-semibold text-primary drop-shadow-md">
-          Vasu Melipaka
-        </h1>
-
-        <p class="mt-3 text-sm md:text-base text-slate-300 leading-relaxed max-w-xl">
-          I help organizations strengthen their Web, Mobile (Android/iOS), and API security by performing 
-          deep manual penetration testing aligned with OWASP, MASVS, and PCI DSS 4.0. My assessments uncover 
-          real-world attack paths that automated scanners miss — enabling leadership to make confident, 
-          risk-based security decisions.
-        </p>
-
-        <!-- BUTTONS -->
-        <div class="mt-7 flex flex-wrap gap-4">
-          <a href="#profile"
-             class="px-5 py-3 rounded-xl bg-primary text-slate-950 font-semibold text-sm shadow-lg shadow-cyan-500/30">
-            About Vasu
-          </a>
-          <a href="#services"
-             class="px-5 py-3 rounded-xl border border-primary/70 text-primary font-semibold text-sm hover:bg-primary/10">
-            Security Services for Your Business
-          </a>
-        </div>
-
-        <!-- BADGES -->
-        <div class="mt-5 flex flex-wrap gap-2 text-[11px] text-slate-400">
-          <span class="px-3 py-1 rounded-full bg-slate-900/70 border border-slate-700">Web & API Pentesting</span>
-          <span class="px-3 py-1 rounded-full bg-slate-900/70 border border-slate-700">Mobile Security (MASVS)</span>
-          <span class="px-3 py-1 rounded-full bg-slate-900/70 border border-slate-700">PCI DSS 4.0 Aligned</span>
-        </div>
-
-        <!-- LINKEDIN -->
-        <a href="https://www.linkedin.com/in/vaasumelipaka"
-           class="inline-block mt-5 px-5 py-2 rounded-xl bg-slate-900 border border-slate-700 text-slate-200 text-sm">
-          View LinkedIn Profile →
-        </a>
-      </div>
-
-      <!-- PHOTO -->
-      <div class="flex-1 flex justify-center md:justify-end">
-        <div class="relative w-64 h-64 md:w-72 md:h-72 rounded-3xl glass shadow-[0_0_80px_rgba(34,211,238,0.25)] flex items-center justify-center">
-          <img
-            src="https://media.licdn.com/dms/image/v2/D5603AQGsPi39qzGTuw/profile-displayphoto-shrink_400_400/profile-displayphoto-shrink_400_400/0/1724678006163?e=1765411200&v=beta&t=GUMLXMFnAeRJz82qGWuObJr6Xoz-gJhaXrykxPJcn0A"
-            alt="Vasu Melipaka"
-            class="w-[92%] h-[92%] object-cover rounded-2xl border border-slate-700/80" />
-
-          <div class="absolute -top-3 -left-3 px-3 py-1 rounded-full bg-emerald-500 text-xs text-slate-950 font-semibold shadow-lg">
-            Available for consulting
-          </div>
-
-          <div class="absolute -bottom-3 -right-3 px-3 py-1 rounded-full bg-slate-900/90 text-[11px] border border-slate-600">
-            6+ yrs Cybersecurity · 11+ yrs IT
-          </div>
-        </div>
-      </div>
-
-    </div>
-  </section>
-
-  <!-- PROFILE SUMMARY -->
-  <section id="profile" class="max-w-6xl mx-auto px-4 pb-20">
-    <div class="flex flex-col md:flex-row md:items-center justify-between gap-4 mb-8">
-      <h2 class="text-2xl md:text-3xl font-semibold text-primary">
-        Profile Summary
-      </h2>
-      <p class="text-xs md:text-sm text-slate-400">
-        Focused on high-impact, manual security assessments – Web, Mobile & APIs.
-      </p>
-    </div>
-
-    <div class="grid md:grid-cols-2 gap-6">
-      <div class="glass rounded-2xl p-6">
-        <h3 class="text-lg font-semibold text-slate-100 mb-2">Who I Am</h3>
-        <p class="text-sm text-slate-300 leading-relaxed">
-          I am a Senior Security Analyst specialized in penetration testing for Web, Mobile and API platforms.
-        </p>
-      </div>
-
-      <div class="glass rounded-2xl p-6">
-        <h3 class="text-lg font-semibold text-slate-100 mb-2">What I Deliver</h3>
-        <ul class="text-sm text-slate-300 space-y-2 leading-relaxed">
-          <li>• Evidence-backed findings with clear PoCs.</li>
-          <li>• OWASP / MASVS / PCI controls mapping.</li>
-          <li>• CVSS-based risk ratings.</li>
-          <li>• Developer-ready remediation guidance.</li>
-          <li>• Retesting to validate fixes.</li>
-        </ul>
-      </div>
-    </div>
-  </section>
-
-  <!-- SERVICES -->
-  <section id="services" class="max-w-6xl mx-auto px-4 pb-20">
-    <div class="flex flex-col md:flex-row md:items-center justify-between gap-4 mb-8">
-      <h2 class="text-2xl md:text-3xl font-semibold text-primary">
-        Security Services
-      </h2>
-    </div>
-
-    <div class="grid md:grid-cols-3 gap-6 text-sm">
-      <div class="glass rounded-2xl p-5 border border-primary/30">
-        <h3 class="font-semibold text-slate-100 mb-2">Web Application Pentesting</h3>
-        <p class="text-slate-300">Deep testing for auth flaws, IDOR, BAC, session issues, validation & logic flaws.</p>
-      </div>
-
-      <div class="glass rounded-2xl p-5">
-        <h3 class="font-semibold text-slate-100 mb-2">Mobile App Security</h3>
-        <p class="text-slate-300">MASVS testing including storage, API calls, RE, runtime protections & SSL pinning.</p>
-      </div>
-
-      <div class="glass rounded-2xl p-5">
-        <h3 class="font-semibold text-slate-100 mb-2">API Security</h3>
-        <p class="text-slate-300">Testing BOLA/BFLA, JWT issues, rate limiting, replay & abuse scenarios.</p>
-      </div>
-
-      <div class="glass rounded-2xl p-5">
-        <h3 class="font-semibold text-slate-100 mb-2">DevSecOps</h3>
-        <p class="text-slate-300">SAST, SCA, CI/CD hardening & secrets scanning.</p>
-      </div>
-
-      <div class="glass rounded-2xl p-5">
-        <h3 class="font-semibold text-slate-100 mb-2">Cloud Security</h3>
-        <p class="text-slate-300">AWS & Azure IAM / Network / Storage misconfiguration review.</p>
-      </div>
-
-      <div class="glass rounded-2xl p-5">
-        <h3 class="font-semibold text-slate-100 mb-2">Retesting & Advisory</h3>
-        <p class="text-slate-300">Validation of fixes & continuous advisory support.</p>
-      </div>
-    </div>
-  </section>
-
-  <!-- CONTACT -->
-  <section id="contact" class="max-w-6xl mx-auto px-4 pb-16">
-    <div class="glass rounded-2xl p-6 md:p-8 flex flex-col md:flex-row items-start md:items-center justify-between gap-6">
       <div>
-        <h2 class="text-2xl font-semibold text-primary mb-2">Let’s Talk Security</h2>
-        <p class="text-sm text-slate-300 max-w-xl">
-          Need a pentest, API review, mobile testing or PCI DSS help? Reach out anytime.
-        </p>
-      </div>
-
-      <div class="flex flex-col gap-3 text-sm">
-        <a href="mailto:contact@vmsecops.com"
-           class="px-5 py-2 rounded-xl bg-primary text-slate-950 font-semibold text-center">
-          Email: contact@vmsecops.com
-        </a>
-
-        <a href="https://wa.me/917386666420"
-           class="px-5 py-2 rounded-xl bg-emerald-500/90 text-slate-950 font-semibold text-center">
-          WhatsApp: +91 7386666420
-        </a>
-
-        <a href="https://www.linkedin.com/in/vaasumelipaka"
-           class="px-5 py-2 rounded-xl bg-slate-900 border border-slate-600 text-slate-100 text-center">
-          View LinkedIn Profile
-        </a>
+        <p class="text-xs tracking-[0.25em] text-slate-400 uppercase">VM SecOps</p>
+        <p class="text-xs text-slate-500">Security | Pentesting | DevSecOps</p>
       </div>
     </div>
 
-    <p class="mt-6 text-[11px] text-slate-500 text-center">
-      © 2025 VM SecOps – Portfolio & Security Services by Vasu Melipaka.
-    </p>
-  </section>
+    <nav class="hidden md:flex items-center gap-6 text-sm">
+      <a href="#top" class="hover:text-primary">Home</a>
+      <a href="#profile" class="hover:text-primary">Profile</a>
+      <a href="#services" class="hover:text-primary">Services</a>
+      <a href="#skills" class="hover:text-primary">Skills</a>
+      <a href="#contact" class="hover:text-primary">Contact</a>
+    </nav>
+  </div>
+</header>
 
+<!-- HERO -->
+<section id="top" class="max-w-6xl mx-auto px-4 pt-10 pb-24 md:pt-16">
+  <div class="flex flex-col md:flex-row items-center gap-10 md:gap-14">
+
+    <!-- TEXT -->
+    <div class="flex-1">
+      <p class="text-xs tracking-[0.3em] text-primarySoft uppercase mb-3">Senior Security Analyst · Offensive Security</p>
+      <h1 class="text-4xl md:text-5xl font-semibold text-primary drop-shadow-md">Vasu Melipaka</h1>
+
+      <p class="mt-3 text-sm md:text-base text-slate-300 leading-relaxed max-w-xl">
+        I help organizations strengthen their Web, Mobile (Android/iOS), and API security by performing deep manual penetration testing aligned with OWASP, MASVS, and PCI DSS 4.0.
+      </p>
+
+      <div class="mt-7 flex flex-wrap gap-4">
+        <a href="#profile" class="px-5 py-3 rounded-xl bg-primary text-slate-950 font-semibold text-sm shadow-lg shadow-cyan-500/30">About Vasu</a>
+        <a href="#services" class="px-5 py-3 rounded-xl border border-primary/70 text-primary font-semibold text-sm hover:bg-primary/10">Security Services for Your Business</a>
+      </div>
+
+      <div class="mt-5 flex flex-wrap gap-2 text-[11px] text-slate-400">
+        <span class="px-3 py-1 rounded-full bg-slate-900/70 border border-slate-700">Web & API Pentesting</span>
+        <span class="px-3 py-1 rounded-full bg-slate-900/70 border border-slate-700">Mobile Security (MASVS)</span>
+        <span class="px-3 py-1 rounded-full bg-slate-900/70 border border-slate-700">PCI DSS 4.0 Aligned</span>
+      </div>
+
+      <a href="https://www.linkedin.com/in/vaasumelipaka" class="inline-block mt-5 px-5 py-2 rounded-xl bg-slate-900 border border-slate-700 text-slate-200 text-sm">
+        View LinkedIn Profile →
+      </a>
+    </div>
+
+    <!-- PHOTO -->
+    <div class="flex-1 flex justify-center md:justify-end">
+      <div class="relative w-64 h-64 md:w-72 md:h-72 rounded-3xl glass shadow-[0_0_80px_rgba(34,211,238,0.25)] flex items-center justify-center">
+        <img src="https://media.licdn.com/dms/image/v2/D5603AQGsPi39qzGTuw/profile-displayphoto-shrink_400_400/profile-displayphoto-shrink_400_400/0/1724678006163?e=1765411200&v=beta&t=GUMLXMFnAeRJz82qGWuObJr6Xoz-gJhaXrykxPJcn0A"
+             class="w-[92%] h-[92%] object-cover rounded-2xl border border-slate-700/80" />
+
+        <div class="absolute -top-3 -left-3 px-3 py-1 rounded-full bg-emerald-500 text-xs text-slate-950 font-semibold shadow-lg">Available for consulting</div>
+        <div class="absolute -bottom-3 -right-3 px-3 py-1 rounded-full bg-slate-900/90 text-[11px] border border-slate-600">
+          6+ yrs Cybersecurity · 11+ yrs IT
+        </div>
+      </div>
+    </div>
+
+  </div>
+</section>
+
+<!-- CONTACT -->
+<section id="contact" class="max-w-6xl mx-auto px-4 pb-16">
+  <div class="glass rounded-2xl p-6 md:p-8 flex flex-col md:flex-row items-start md:items-center justify-between gap-6">
+    <div>
+      <h2 class="text-2xl font-semibold text-primary mb-2">Let’s Talk Security</h2>
+      <p class="text-sm text-slate-300 max-w-xl">Need a pentest, API review, mobile testing or PCI DSS help? Reach out anytime.</p>
+    </div>
+
+    <div class="flex flex-col gap-3 text-sm">
+      <a href="mailto:contact@vmsecops.com" class="px-5 py-2 rounded-xl bg-primary text-slate-950 font-semibold text-center">Email: contact@vmsecops.com</a>
+      <a href="https://wa.me/917386666420" class="px-5 py-2 rounded-xl bg-emerald-500/90 text-slate-950 font-semibold text-center">WhatsApp: +91 7386666420</a>
+      <a href="https://www.linkedin.com/in/vaasumelipaka" class="px-5 py-2 rounded-xl bg-slate-900 border border-slate-600 text-slate-100 text-center">View LinkedIn Profile</a>
+    </div>
+  </div>
+
+  <p class="mt-6 text-[11px] text-slate-500 text-center">© 2025 VM SecOps – Portfolio & Security Services by Vasu Melipaka.</p>
+</section>
 
 <!-- ========================================================= -->
 <!-- 🔥 CYBER THREAT WIDGET + LIVE CVE + LIVE NEWS + TICKER -->
@@ -298,70 +187,61 @@
 <!-- LIVE NEWS + CVE FETCH SCRIPT -->
 <script>
 // Fetch Cybersecurity News
-/* ------------------- FIXED CVE API (NO API KEY REQUIRED) ------------------- */
-async function loadCVEs() {
-  const container = document.getElementById("vm-cve-list");
-  container.innerHTML = "Loading latest CVEs…";
+async function loadCyberNews() {
+  const container = document.getElementById("vm-news-list");
+  container.innerHTML = "Loading news…";
 
   try {
-    // CIRCL API → Public, fast, no key needed
+    const res = await fetch("https://hn.algolia.com/api/v1/search?query=cyber%20security&tags=story");
+    const data = await res.json();
+
+    container.innerHTML = "";
+    data.hits.slice(0, 8).forEach(n => {
+      container.innerHTML += `
+        <div>
+          <a href="${n.url}" target="_blank" class="text-primary font-medium hover:underline">
+            ${n.title}
+          </a>
+          <p class="text-slate-500 text-[10px]">${new Date(n.created_at).toLocaleDateString()}</p>
+        </div>
+      `;
+    });
+
+    return data.hits.slice(0, 5).map(n => n.title);
+  } catch {
+    container.innerHTML = "<p class='text-red-400'>Unable to load news.</p>";
+    return [];
+  }
+}
+
+// Fetch Latest CVEs — Public API, works in browser
+async function loadCVEs() {
+  const container = document.getElementById("vm-cve-list");
+  container.innerHTML = "Loading CVEs…";
+
+  try {
     const res = await fetch("https://cve.circl.lu/api/last");
     const data = await res.json();
 
-    const latest = data.slice(0, 10); // Top 10 CVEs
-
     container.innerHTML = "";
 
-    latest.forEach(cve => {
+    data.slice(0, 10).forEach(cve => {
       container.innerHTML += `
-        <div class="mb-2">
+        <div>
           <span class="text-red-400 font-bold">${cve.id}</span>
           <p class="text-slate-400 text-[10px]">${cve.summary.substring(0, 120)}...</p>
         </div>
       `;
     });
 
-    return latest.map(x => x.id);
-  } catch (err) {
+    return data.slice(0, 5).map(cve => cve.id);
+  } catch {
     container.innerHTML = "<p class='text-red-400'>Unable to load CVEs.</p>";
     return [];
   }
 }
 
-
-// Fetch Latest CVEs
-async function loadCVEs() {
-  const container = document.getElementById("vm-cve-list");
-  container.innerHTML = "Loading CVEs…";
-
-  try {
-    const res = await fetch("https://services.nvd.nist.gov/rest/json/cves/2.0?cvssV3Severity=HIGH,Critical");
-    const data = await res.json();
-
-    container.innerHTML = "";
-
-    data.vulnerabilities.slice(0, 8).forEach(v => {
-      const cve = v.cve.id;
-      const score = v.cve.metrics.cvssMetricV31?.[0]?.cvssData?.baseScore || "N/A";
-      const desc = v.cve.descriptions[0].value;
-
-      container.innerHTML += `
-        <div>
-          <span class="text-red-400 font-bold">${cve}</span>
-          <span class="text-slate-400 text-[10px]">Score: ${score}</span>
-          <p class="text-slate-500 text-[10px]">${desc.substring(0, 80)}...</p>
-        </div>
-      `;
-    });
-
-    return data.vulnerabilities.slice(0, 5).map(v => v.cve.id + " (High)");
-  } catch {
-    container.innerHTML = "<p class='text-red-400'>CVE fetch failed.</p>";
-    return [];
-  }
-}
-
-// Build Ticker
+// Build Scrolling Ticker
 async function updateTicker() {
   const ticker = document.getElementById("vm-ticker");
 
@@ -376,7 +256,7 @@ async function updateTicker() {
   ticker.innerText = combined.join("  •  ");
 }
 
-// Show popup after 3 sec
+// Auto-run popup + ticker
 setTimeout(() => {
   document.getElementById("vm-cyber-widget").style.display = "block";
   updateTicker();
